@@ -1,3 +1,9 @@
+2012-10-23  Corinna Vinschen  <corinna@vinschen.de>
+
+	* thread.h (List_insert): Cast first parameter in
+	InterlockedCompareExchangePointer call to avoid compiler warnings.
+	(List_remove): Ditto.
+
 2012-10-22  Corinna Vinschen  <corinna@vinschen.de>
 
 	* cygtls.h (_tlsbase): Define for __x86_64__.
